[gd_scene load_steps=18 format=3 uid="uid://34pd07047hq6"]

[ext_resource type="Script" path="res://scripts/battleControl.gd" id="1_ley0g"]
[ext_resource type="Texture2D" uid="uid://cbhsnk6jwt7na" path="res://sprites/screen.png" id="1_o2dpd"]
[ext_resource type="PackedScene" uid="uid://b7l2jqvr7i8xy" path="res://scenes/Level.tscn" id="1_tn41j"]
[ext_resource type="Texture2D" uid="uid://bq0pyw858yq8t" path="res://sprites/border.png" id="3_00s12"]
[ext_resource type="Texture2D" uid="uid://cacxyjmgwp1g0" path="res://sprites/life_border.png" id="3_54313"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="5_qqkk1"]
[ext_resource type="Script" path="res://scripts/PlayerStatus.gd" id="6_6f7pi"]
[ext_resource type="FontFile" uid="uid://blw5mpdt7e6p6" path="res://sprites/fonts/NESCyrillic.ttf" id="7_odb6c"]
[ext_resource type="Texture2D" uid="uid://8cfash68lg14" path="res://sprites/botao.png" id="8_iu6v3"]
[ext_resource type="AudioStream" uid="uid://csegq76mcvkel" path="res://musics/fase.mp3" id="10_v0gqb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wqnsu"]
texture = ExtResource("1_o2dpd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_owl7n"]
texture = ExtResource("3_00s12")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1t10a"]
texture = ExtResource("3_54313")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo5bj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktlhh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc1r8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mw5d7"]
texture = ExtResource("8_iu6v3")

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ley0g")

[node name="Fundo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wqnsu")
metadata/_edit_lock_ = true

[node name="Camera" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Camera"]
clip_contents = true
anchors_preset = -1
anchor_left = 0.13
anchor_top = 0.154
anchor_right = 0.87
anchor_bottom = 0.846
offset_left = 0.23999
offset_top = 0.207993
offset_right = -0.240051
offset_bottom = -0.208008
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Camera/SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(851, 448)
render_target_update_mode = 4

[node name="Level" parent="Camera/SubViewportContainer/SubViewport" instance=ExtResource("1_tn41j")]

[node name="CameraBorda" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_owl7n")
metadata/_edit_lock_ = true

[node name="VidaSoulOneBorda" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.228
anchor_right = 0.082
anchor_bottom = 0.855
offset_left = 0.703999
offset_top = -27.744
offset_right = -0.464005
offset_bottom = -28.04
pivot_offset = Vector2(20, 17.6181)
theme_override_styles/panel = SubResource("StyleBoxTexture_1t10a")

[node name="VidaSoulTwoBorda" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.228
anchor_right = 0.082
anchor_bottom = 0.855
offset_left = 1002.7
offset_top = -27.744
offset_right = 1001.54
offset_bottom = -28.04
pivot_offset = Vector2(20, 17.6181)
theme_override_styles/panel = SubResource("StyleBoxTexture_1t10a")

[node name="PlayerStatus" type="Node" parent="."]
script = ExtResource("6_6f7pi")

[node name="VidaSoulOne" type="ProgressBar" parent="PlayerStatus"]
anchors_preset = -1
anchor_left = 0.052868
anchor_top = 0.909296
anchor_right = 0.0788681
anchor_bottom = 1.5153
offset_left = 0.0960083
offset_top = -461.224
offset_right = -1.856
offset_bottom = -463.912
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1.96635, 136)
theme_override_styles/fill = SubResource("StyleBoxFlat_oo5bj")
value = 100.0
fill_mode = 3
show_percentage = false
script = ExtResource("5_qqkk1")

[node name="VidaSoulTwo" type="ProgressBar" parent="PlayerStatus"]
anchors_preset = -1
anchor_left = 0.92266
anchor_top = 0.909296
anchor_right = 0.94866
anchor_bottom = 1.5153
offset_left = 0.0959473
offset_top = -461.224
offset_right = -1.85596
offset_bottom = -463.912
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1.96635, 136)
theme_override_styles/fill = SubResource("StyleBoxFlat_oo5bj")
value = 100.0
fill_mode = 3
show_percentage = false
script = ExtResource("5_qqkk1")

[node name="panelBattle" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0720215
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ktlhh")
metadata/_edit_use_anchors_ = true

[node name="buttons" type="HBoxContainer" parent="panelBattle"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.087
anchor_right = 0.913
anchor_bottom = 0.792
offset_left = -0.224007
offset_top = 5.0
offset_right = 0.223999
offset_bottom = -0.0240021
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button1" type="Button" parent="panelBattle/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_odb6c")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/normal = SubResource("StyleBoxTexture_mw5d7")
text = "ATACK 1
"

[node name="Button2" type="Button" parent="panelBattle/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_odb6c")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/normal = SubResource("StyleBoxTexture_mw5d7")
text = "ATACK 1
"

[node name="Button3" type="Button" parent="panelBattle/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_odb6c")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/normal = SubResource("StyleBoxTexture_mw5d7")
text = "ATACK 1
"

[node name="Button4" type="Button" parent="panelBattle/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_odb6c")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uc1r8")
theme_override_styles/normal = SubResource("StyleBoxTexture_mw5d7")
text = "ATACK 1
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_v0gqb")
volume_db = -23.045
autoplay = true

[connection signal="pressed" from="panelBattle/buttons/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="panelBattle/buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="panelBattle/buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="panelBattle/buttons/Button4" to="." method="_on_button_4_pressed"]
